# mpi_repaso

./: CMakeLists.txt  README.md  bordes.cpp  bordes.h  conandata.yml  correccion.cpp  datos.txt  ejemplo01  ejemplo01.cpp  ejemplo02  ejemplo02.cpp  ejemplo03  ejemplo03.cpp  ejemplo03_completo  ejemplo03_completo.cpp  ejemplo03_completo.h  ejemplo03_v4.cpp  ejemplo_matrices.cpp  espejo.cpp  espejo.h  grises.h  mediana.cpp  mediana.h  ordenar.cpp  prueba_frecuencias  prueba_frecuencias.cpp  prueba_parcial  prueba_parcial.cpp  repaso_examen.cpp  repaso_examen.h  repasoe  repasoe.cpp  sobel.cpp  sobel.h  suma_imagenes.cpp  suma_imagenes.h  tarea_ejemplo03.cpp
